# CampusCore

./: .env.example  .gitignore  Cargo.toml  README.md
.sqlx/: query-0153d20006e14034874563afdff9158f2cb0819ae6c1d31b136aa1dcf90684d5.json  query-0323fd215a1cd599db69276df67a1ddb97f475fb05fe806522d6193eeb6bb366.json  query-07e4a830d704c252649fda0d049026825331e44c02b593ab14c5d4576c300604.json  query-095210624f72bbac5a70a8e0aecf0f93b2cb7dd0d164a8c45b8ccec1858fc17b.json  query-098401732bf3dc9524ce5965cf785e09ad2bb3a3114223f7ab9d99157ce03fea.json  query-0b63ed5cbdb60fd722962f6a5bcaf1755f8d4aa15c1530ee99222e347ea7cac1.json  query-0f198292f429fb95d7f52a27d7523e4769a64fbc4a5c9b54a84bcda8ecf89e7d.json  query-1241e72897a2298ff82776dcd5f4cbd779b2bd5ffee51af9284122e546ff6c96.json  query-125e216594c710cc46de48c96e81dd6998914e4e81d2f0159b4fd1e4acfca43c.json  query-13d118b40d63c06a62034255932ff668978aa33083243e9d1cc4181a604b4ad5.json  query-14b3722c0102af03167ca18c75e97bad25383665588e2422ebe4a073b4c9b758.json  query-1956268d00c0fb3aa55eb9d8ce2dbd06cde4f4b089102a068dc6fc2ea5f5540b.json  query-1d27d755b9eaf42dcbdd2e61020f02f3ac731d17d4c5ca12cf405aa0fa79b26d.json  query-1dce13f6a49e3d5e39ccef6fca630e007c36f517219ea5f471549ee16666252c.json  query-1dd4b5acd80a6422b13f67be1ddd1fe06551f8f2556053290e60b04edc7274ae.json  query-20801b431d9a2629856ff173d1e19fece02b83a6d8215c8b60f59f4a28249a76.json  query-21bdc0b06d7b38e168de65bc7b03d04ed61c8f41c347a5ecb60b2202da20a207.json  query-222b571a735afd9bf8dd875dbad434c4d2f6c4be6a5410c38b2079d7d567ab53.json  (+167 more)
backups/: 2025-07-01.sql  2025-11-03_12.40
(+317 files in other folders)
