[package]
name = "sik_terpadu_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
bcrypt = "0.17.0"
bytes = "1.10.1"
#chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
dotenvy = "0.15.7"
futures = "0.3.31"
infer = "0.19.0"
jsonwebtoken = "9.3.1"
mime_guess = "2.0.5"
once_cell = "1.21.3"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time","rust_decimal"] }
time = { version = "0.3", features = ["serde", "macros","serde-human-readable"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
